# QuickLootRE

./: .gitignore  CMakeLists.txt  CMakePresets.json  QuickLootRE.toml  vcpkg.json
cmake/: archive_artifacts.cmake
scripts/: archive_artifacts.py
src/: CMakeLists.txt  PCH.h  Settings.h  main.cpp
src/Animation/: Animation.h
src/Events/: Events.cpp  Events.h
src/Scaleform/: LootMenu.h
swf/: LootMenu.fla
